Finish non mobile first draft

--- a/Projects/index.html
+++ b/Projects/index.html
@@ -27,50 +27,153 @@
 
     <section id="appOne" class="applications fade-in">
       <h3>Student Review Database</h3>
-      <p>Flask Web Application</p>
-      <p>A Web application built to allows student to review classes and Professors.
-        Allows them to also view reviews left by other students.
+      <p>Flask based Web Application</p>
+      <p>Hosts the MySQL Database on AWS</p>
+      <p>A Web application built to allows student to review classes and Professors. Features include
+      <ul>
+        <li>Account creation</li>
+        <li>Account information</li>
+        <li>Professor list</li>
+        <li>Professor view</li>
+        <li>Class list</li>
+        <li>Class view</li>
+        <li>Leave review on specific classes</li>
+        <li>Leave review on specific professors</li>
+        <li>Update your reviews</li>
+        <li>Delete your reviews</li>
+      </ul>
       </p>
-      <p>Data is saved in an AWS Database</p>
-      <a href="https://github.com/amp8889/studentReviewDatabase">Source Code</a>
+      <p><a href="https://github.com/amp8889/studentReviewDatabase">Source Code</a></p>
 
 
       <section class="imageSection">
-        <img src="../assets/studentReviewLogin.png" alt="IMAGE TO BE ADDED">
-        <img src="../assets/studentReviewAccountInfo.png" alt="IMAGE TO BE ADDED">
-        <img src="../assets/studentReviewProfessorList.png" alt="IMAGE TO BE ADDED">
-        <img src="../assets/studentReviewProfessorView.png" alt="IMAGE TO BE ADDED">
-        <img src="../assets/studentReviewClassList.png" alt="IMAGE TO BE ADDED">
-        <img src="../assets/studentReviewViewClass.png" alt="IMAGE TO BE ADDED">
-        <img src="../assets/studentReviewleaveReview.png" alt="IMAGE TO BE ADDED">
-        <img src="../assets/studentReviewViewNewReview.png" alt="IMAGE TO BE ADDED">
-        <img src="../assets/studentReviewDBTable.png" alt="IMAGE TO BE ADDED">
+        <img src="../assets/studentReviewLogin.png" alt="Image of Login Screen" class="enlargeable">
+        <img src="../assets/studentReviewAccountInfo.png" alt="Image of Account Information"class="enlargeable">
+        <img src="../assets/studentReviewProfessorList.png" alt="Image of Professor Descriptions"class="enlargeable">
+        <img src="../assets/studentReviewProfessorView.png" alt="Image of most recent reviews "class="enlargeable">
+        <img src="../assets/studentReviewClassList.png" alt="Image of Class Descriptions"class="enlargeable">
+        <img src="../assets/studentReviewViewClass.png" alt="Image of Specific Class"class="enlargeable">
+        <img src="../assets/studentReviewleaveReview.png" alt="Image of Leaving a Review"class="enlargeable">
+        <img src="../assets/studentReviewViewNewReview.png" alt="Image of Review for Specific Class"class="enlargeable">
+        <img src="../assets/studentReviewDBTable.png" alt="Image of Database Table Specifications"class="enlargeable">
       </section>
 
     </section>
 
 
+
+
+
+
+
+
+    <section id="appFour" class="applications fade-in">
+      <h3>Flutter Yahtzee</h3>
+      <p>Uses the Flutter Framework to create Yahtzee and allows the user to play a full game against themselves </p>
+      <p>Allows Users to select which dice they want to keep</p>
+      <p>Allows users to pick what category they want to pick after 3 dice rolls</p>
+      <p>Keeps track of a users points until the game is over or the user resets the game</p>
+      <p>Allows users to pick a category they have no points in to get 0 points</p>
+      <p><a href="https://github.com/amp8889/Flutter-Yahtzee">Source Code</a></p>
+
+      <section class="imageSection">
+
+        <img src="../assets/yahtzeeStartScreen.png" alt="Yahtzee Start Screen"class="enlargeable">
+        <img src="../assets/yahtzeeSelectingDice.png" alt="Yahtzee Selecting Dice"class="enlargeable">
+        <img src="../assets/yahtzeeSelectingAllDice.png" alt="Yahtzee Selecting All Dice"class="enlargeable">
+        <img src="../assets/yahtzeeSelectingCategory.png" alt="Yahtzee Selecting Category"class="enlargeable">
+        <img src="../assets/yahtzeeSeeing2Scores.png" alt="Seeing two Scores"class="enlargeable">
+        <img src="../assets/yahtzeeSelectingZeroPointsoints.png" alt="Yahtzee Selecting a zero point category"class="enlargeable">
+
+
+
+
+
+
+
+      </section>
+
+
+    </section>
+
+
+
     <section id="appTwo" class="applications fade-in">
       <h3>Cybergoose</h3>
 
-      <p>A cybersecurity Application built to scan your PC for weaknesses </p>
+      <p>A cybersecurity application built to scan your PC for weaknesses </p>
+      <p>It will allow an admin to set what the standards will be and then scan all the computers using that standard
+      </p>
+      <p>If the standard is not met, it will alert that user and have them change settings to meet standards</p>
+      <p>When choosing a password, it will use the custom requirements and force the user to follow them</p>
+      <p>Includes a custom dashboard to track how complient each device is</p>
+      <p>Creates graphs to easily tell how complient your workplace is</p>
       <p>Saves data in a secure Database hosted on AWS</p>
       <p>Video Demoonstraction: <a href="https://github.com/amp8889/studentReviewDatabase">Click Here</a>
       </p>
 
 
       <section class="imageSection">
-        <img src="../assets/cybergooseHomePage.png" alt="Cybergoose Homepage">
-        <img src="../assets/passwordRequirements.png" alt="Cybergoose Password Requirements">
-        <img src="../assets/EventLogs.png" alt="Cybergoose Event Logs">
-        <img src="../assets/cybergooseServerTable.png" alt="Cybergoose Server Table">
-        <img src="../assets/cybergooseDashboard.png" alt="Cybergoose Dashboard">
-        <img src="../assets/cybergooseAnalytics.png" alt="Cybergoose Analytics">
+        <img src="../assets/cybergooseHomePage.png" alt="Cybergoose Homepage"class="enlargeable">
+        <img src="../assets/passwordRequirements.png" alt="Cybergoose Password Requirements"class="enlargeable">
+        <img src="../assets/EventLogs.png" alt="Cybergoose Event Logs"class="enlargeable">
+        <img src="../assets/cybergooseServerTable.png" alt="Cybergoose Server Table"class="enlargeable">
+        <img src="../assets/cybergooseDashboard.png" alt="Cybergoose Dashboard"class="enlargeable">
+        <img src="../assets/cybergooseAnalytics.png" alt="Cybergoose Analytics"class="enlargeable">
 
       </section>
 
 
     </section>
+
+
+
+    <section id="appSix" class="applications fade-in">
+      <h3>Hawk Bizzare</h3>
+      <p>A Flask Web Application that servers as a College Marketplace for a specific school</p>
+      <p>
+        A platform for Illinois Tech Students to Buy and Sell various school related supplies (Ex: Text Books
+        , Furnature, Archetect Tools, etc.)
+      </p>
+      <p>Uses the Google Oauth API to track logins and prevent out of school accounts from logging in.</p>
+      <p>Pulls data such as name, email, and profile image using Google Oauth to use throughout the application and can
+        be viewed in the profile page</p>
+      <p>Allows users to add their own listings and then view them both in the public listings page, and their private
+        profile page</p>
+      <p>Uses a MySQL Database to store all the information which is hosted on a live Ubuntu Server along with the
+        application</p>
+      <p>Uses Vault to secure any secrets that we might have in the application</p>
+
+      <section class="imageSection">
+        <img src="../assets/hawkBizzareAbout.png" alt="Image of About Page"class="enlargeable">
+        <img src="../assets/hawkBizzareHomepage.png" alt="Image of Homepage"class="enlargeable">
+        <img src="../assets/hawkBizzareOauthLogin.png" alt="Image of Google Oauth"class="enlargeable">
+        <img src="../assets/hawkBizzareAllowInfo.png" alt="Image of Google asking for Permission"class="enlargeable">
+        <img src="../assets/hawkBizzareProfilePage.png" alt="Image of Google asking for Permission"class="enlargeable">
+        <img src="../assets/hawkBizzareViewListings.png" alt="Image of Google asking for Permission"class="enlargeable">
+        <img src="../assets/hawkBizzareDatabase.png" alt="Image of Google asking for Permission"class="enlargeable">
+        <img src="../assets/hawkBizzareServers.png" alt="Image of Google asking for Permission"class="enlargeable">
+
+
+      </section>
+    </section>
+
+    <section id="appFive" class="applications fade-in">
+      <h3>Get Sunset Application</h3>
+      <p>A Basic Website that uses the Sunset Sunrise API to get sunsets at certain locations</p>
+      <p>Also Uses Current Location API to get Sunset Information for your current location</p>
+      <a href="https://github.com/amp8889/JSWebPrograms">Github Repo</a>
+
+      <section class="imageSection">
+        <img src="../assets/sunsetChicago.png" alt="Image of Sunset Chicago"class="enlargeable">
+        <img src="../assets/sunsetCurrentLocation.png" alt="Image Sunset Current Location"class="enlargeable">
+        <img src="../assets/sunsetFlordia.png" alt="Image of Sunset Flordia"class="enlargeable">
+        <img src="../assets/sunsetNewOrleans.png" alt="Image of Sunset New Orleans"class="enlargeable">
+      </section>
+
+    </section>
+
+
 
 
     <section id="appThree" class="applications fade-in">
@@ -80,7 +183,7 @@
       <h2>Broken Down into 3 sections</h2>
 
 
-      <ul>
+      <ul id="SearchEngineList">
         <li>Web Scrapper</li>
         <p>The web crawler will take a starting link and it will begin scrapping at that link and will go a predefined
           distance before stopping.
@@ -106,57 +209,24 @@
       </ul>
       <p><a href="https://github.com/amp8889/searchEngine">Source Code</a></p>
 
-      <section>
-
-        <img src="../assets/searchEngineSearch1.png" alt="Search Engine Search: 1">
-        <img src="../assets/searchEngineSearch2.png" alt="Search Engine Search: 2">
-
-
-
-
-      </section>
-    </section>
-
-
-    <section id="appFour" class="applications fade-in">
-      <h3>Flutter Yahtzee</h3>
-      <p>Uses the Flutter Framework to create </p>
-    </section>
-
-
-    <section id="appFive" class="applications fade-in">
-      <h3>Get Sunset Application</h3>
-      <p>A Basic Website that uses the Sunset Sunrise API to get sunsets at certain locations</p>
-      <p>Also Uses Current Location API to get Sunset Information for your current location</p>
-      <a href="https://github.com/amp8889/JSWebPrograms">Github Repo</a>
-
       <section class="imageSection">
-        <img src="../assets/sunsetChicago.png" alt="Image of Sunset Chicago">
-        <img src="../assets/sunsetCurrentLocation.png" alt="Image Sunset Current Location">
-        <img src="../assets/sunsetFlordia.png" alt="Image of Sunset Flordia">
-        <img src="../assets/sunsetNewOrleans.png" alt="Image of Sunset New Orleans">
-      </section>
 
-    </section>
+        <img src="../assets/searchEngineSearch1.png" alt="Search Engine Search: 1"class="enlargeable">
+        <img src="../assets/searchEngineSearch2.png" alt="Search Engine Search: 2"class="enlargeable">
 
 
-    <section id="appSix" class="applications fade-in">
-      <h3>Hawk Bizzare</h3>
-      <p>A Flask Web Application with built in Vault Control</p>
-      <p>
-        A platform for Illinois Tech Students to Buy and Sell various school related supplies (Ex: Text Books
-        , Furnature, Archetect Tools, etc.)
-      </p>
-      <p>Uses the Google Oauth API to track logins and prevent out of school accounts from logging in.</p>
-      <a href="https://github.com/illinoistech-itm/team03m-2024">Github Repo</a>
 
-      <section class="imageSection">
-        <img src="../assets/hawkBizzareAbout.png" alt="Image of About Page">
-        <img src="../assets/hawkBizzareHomepage.png" alt="Image of Homepage">
-        <img src="../assets/hawkBizzareOauthLogin.png" alt="Image of Google Oauth">
-        <img src="../assets/hawkBizzareAllowInfo.png" alt="Image of Google asking for Permission">
+
       </section>
     </section>
+
+    <div id="myModal" class="modal">
+      <span class="close">&times;</span>
+      <img class="modal-content" id="img01">
+      <div id="caption"></div>
+    </div>
+
+
 
   </main>
   <footer id="footer">
