--- a/resume/index.html
+++ b/resume/index.html
@@ -11,147 +11,99 @@
   <header>
     <nav id="site-nav">
       <ul>
-        <li>
-          <a href="../">Home</a>
-        </li>
-        <li>
-          <a href="../resume">Resume</a>
-        </li>
-        <li>
-          <a href="../Projects">Projects</a>
-        </li>
+        <li><a href="../">Home</a></li>
+        <li><a href="../resume">Resume</a></li>
+        <li><a href="../Projects">Projects</a></li>
       </ul>
     </nav>
-
   </header>
   <main id="resume-content">
+    <section class="side-info fade-in" id="contact-info">
+      <h1>Aidan Pavlik</h1>
+      <img src="../assets/aidan_pavlik_suit.jpg" alt="Image of Aidan Pavlik" id="aidanPavlikImage">
 
+      <p>Chicago, Illinois</p>
+      <p><a href="mailto:aidan.pavlik@gmail.com">aidan.pavlik@gmail.com</a></p>
+      <p><a href="tel:+1-630-523-2863">630-523-2863</a></p>
+      <p><a href="https://www.linkedin.com/in/aidan-pavlik-438719235/">LinkedIn Profile</a></p>
+      <p><a href="https://github.com/amp8889">Github Profile</a></p>
 
-    <section class="side-info fade-in" id="resume">
-      <h3 class="resume-side-title">Contact Information</h3>
-      <p>Aidan Pavlik</p>
-      <img class="image-side" src="../assets/aidan_casual.jpg" alt="Image of Aidan" />
-
-      <ul>
-        <li class="email"><a href="mailto:aidan.pavlik@gmail.com">aidan.pavlik@gmail.com</a></li>
-        <li><a href="tel:+1-630-523-2863">630-523-2863</a></li>
-        <li><a href=" https://www.linkedin.com/in/aidan-pavlik-438719235/">LinkedIn</a></li>
-        <li><a href="https://github.com/amp8889">Github</a></li>
-        <li>Chicago Il</li>
-      </ul>
     </section>
 
     <section class="main-info fade-in" id="education">
-      <h3 class="resume-main-title">Education</h3>
-      <p></p>
-      <p>Illinois Institute of Technology</p>
-      <p>4rd Year Information Technology Management Major</p>
-      <p>Specialization in Software Development</p>
-      <p>Minor in Software Engineering</p>
-      <p>Expected Graduation: May 2024</p>
+      <h2>Education</h2>
+      <p>Illinois Institute of Technology, Chicago, IL</p>
+      <p><strong>Bachelor of Information Technology and Management</strong> - Cum Laude Honors, May 2024</p>
       <p>GPA: 3.54/4.0</p>
+      <p>Minor in Software Engineering</p>
+      <p>Specialization in Software Development</p>
+      <p>Dean’s List: Fall 2021, Fall 2023, Spring 2023, Fall 2024</p>
+    </section>
+
+    <section class="main-info fade-in" id="experience">
+      <h2>Relevant Experience</h2>
+      <h3>Technology Intern — AkGroup LLC (June–August 2023)</h3>
+      <ul>
+        <li>Hardware repair: Replaced screens, batteries, touchpads, and keyboards (Macs, PCs, Chromebooks)</li>
+        <li>Networking: Wire pulling and system monitoring via Syncro app</li>
+        <li>Computer management: Remote software installation and troubleshooting</li>
+      </ul>
+
+      <h3>Scarlet Bazaar — Web Based Market Application</h3>
+      <ul>
+        <li>Fully automated deployment to a live server (Ubuntu) using Packer and Terraform</li>
+        <li>Flask-based web application with an integrated load balancer</li>
+        <li>Google Oauth integration to allow users to login and use their information throughout the application</li>
+        <li>MySQL and Vault integration</li>
+      </ul>
+
+      <h3>Java Web Application (Solo Project)</h3>
+      <ul>
+        <li>Used Java, MySQL, XML, and more to build a Java application with multiple entities and security groups</li>
+      </ul>
+
+      <h3>Custom Search Engine</h3>
+      <ul>
+        <li>Used Scrapy to scrape the web and download any select number of HTML files</li>
+        <li>Scikit-Learn indexer to create an inverted index in Pickle format using TF-IDF score/weight representations
+          and Cosine similarity</li>
+        <li>Flask Processor that takes queries in JSON format to find the Top-K ranked results</li>
+        <li><a href="https://github.com/amp8889/searchEngine">Source Code</a></li>
+      </ul>
     </section>
 
     <section class="main-info fade-in" id="skills">
-      <h3 class="resume-main-title">Professional Skills</h3>
-      <p></p>
+      <h2>Technical Skills</h2>
       <ul>
-        <li>Java</li>
-        <li>Python</li>
-        <li>Dart</li>
-        <li>Flutter</li>
-        <li>C#</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>MySQL</li>
-        <li>JavaScript</li>
-        <li>Operation Systems</li>
-        <li>Troubleshooting</li>
-        <li>Git/Github</li>
-        <li>Communication</li>
+        <li><strong>Languages:</strong> Python, Java, JavaScript, SQL (MySQL), Dart, HTML/CSS</li>
+        <li><strong>Frameworks + APIs:</strong> Flask, Flutter, Google Oauth, FastAPI, Google Maps, Scikit-Learn</li>
+        <li><strong>Libraries:</strong> Numpy, Pandas, JDBC, Matplotlib, Requests, Scrapy</li>
+        <li><strong>Developer Tools:</strong> Git, Terraform, Packer, Vagrant, Vault</li>
       </ul>
     </section>
 
-    <section class="main-info fade-in">
-      <h3 class="resume-main-title">Relevent Experience</h3>
-      <p></p>
-
-      <h4>IT Intern at AK Group LLC (June-August 2023)</h4>
+    <section class="main-info fade-in" id="leadership">
+      <h2>Leadership Experience</h2>
+      <h3>Captain and Manager of the Illinois Tech Overwatch Esports Team</h3>
       <ul>
-        <li>Hardware Repair</li>
-        <li>Basic Networking Upkeep</li>
-        <li>Basic Microsoft Automate</li>
-        <li>Computer Upkeep</li>
-      </ul>
-      <h4>Class and Professor Reviewer</h4>
-      <ul>
-        <li>Made with Small Group</li>
-        <li>A Flask Web Application using AWS RDS</li>
-        <li>Allows users to create an account and login</li>
-        <li>They are able to leave reviews on Classes and Professors which are saved in the database
-          and tied to their account
-        </li>
-        <li>They are then able to view other reviews that everyone else left</li>
-        <li>Basic Seartch Functionality</li>
-        <li><a href="https://github.com/amp8889/Python_Programs">https://github.com/amp8889/Python_Programs</a></li>
-
-      </ul>
-
-      <h4>Java Web Application</h4>
-      <ul>
-        <li>Solo Project</li>
-        <li>
-          Java, MySQL, XML, and other tools to build a fully functional Java Web Application with multiple entities and
-          multiple security groups.
-        </li>
-        <li> <a
-            href="https://github.com/itmd4515/itmd4515-s23-fp-amp8889">https://github.com/itmd4515/itmd4515-s23-fp-amp8889a</a>
-        </li>
-
-      </ul>
-
-      <h4>Cybergoose: Cyber Security Endpoint compliance application</h4>
-      <ul>
-        <li>Class wide project</li>
-        <li>
-          Uses various tools from Python, Flutter, AWS, and MySQL to track incompliant computers and fixes the issues
-          while also keeping track of all the computers in a RTDB
-        </li>
-        <li> <a href="https://drive.google.com/drive/u/1/folders/1WlbDT-KBHXO18t4utlylJ602jdoQZGGi">Click here to see
-            demonstration</a>
-        </li>
+        <li>Managed the school Esports team — scheduling practices and entering competitions</li>
+        <li>Responsible for individual member and unified team growth</li>
+        <li>Interviewed potential candidates and made recommendations for Illinois Tech Esports Scholarships</li>
       </ul>
     </section>
-    <section class="main-info fade-in" id="work">
-      <h3 class="resume-main-title">Leadership Experience</h3>
-      <p></p>
-      <h4>Captain and Manager of the Illinois Tech Overwatch Esports Team</h4>
+
+    <section class="main-info fade-in" id="community">
+      <h2>Community Work</h2>
       <ul>
-        <li>Responsible for managing the Esports team, scheduling practices, and finding competitions.</li>
-        <li>Ensured growth both as a team, and individually.</li>
-        <li>Responsible for accepting and interviewing potential candidates for the Illinois Tech Esports Scholarship.
-        </li>
-      </ul>
-    </section>
-    <section class="main-info fade-in">
-      <h3 class="resume-main-title">Personal</h3>
-      <p></p>
-      <ul>
-        <li>Volunteer for Second City Canine Rescue (2013 - Present) </li>
-        <li>Dean's list
-          <ul>
-            <li>Fall 2021</li>
-            <li>Spring 2022</li>
-            <li>Fall 2023</li>
-          </ul>
-        </li>
+        <li>Volunteer — Second City Canine Rescue (2016–Present)</li>
       </ul>
     </section>
   </main>
   <footer id="footer">
-      <p>&copy; 2024 Aidan Pavlik. All rights reserved.</p>
+    <p>&copy; 2024 Aidan Pavlik. All rights reserved.</p>
   </footer>
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="../main.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <script src="../main.js"></script>>
 </body>
+
 </html>
