Fix broken link and some padding issues

--- a/Projects/index.html
+++ b/Projects/index.html
@@ -109,7 +109,7 @@
       <p>Includes a custom dashboard to track how complient each device is</p>
       <p>Creates graphs to easily tell how complient your workplace is</p>
       <p>Saves data in a secure Database hosted on AWS</p>
-      <p>Video Demoonstraction: <a href="https://github.com/amp8889/studentReviewDatabase">Click Here</a>
+      <p>Video Demoonstraction: <a href="https://drive.google.com/drive/u/0/folders/1WlbDT-KBHXO18t4utlylJ602jdoQZGGi">Click Here</a>
       </p>
 
 
